<resources>
    <string name="app_name">Squire Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="number_sequence">%1$d. %2$s</string>
    <string name="hint">Hint: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kaour">Kaour</string>
    <string name="elsie">Elsie</string>
    <string name="eirlys">Eirlys</string>
    <string name="dai">Dai</string>
    <string name="switch_button">Switch</string>
    <string name="character_name">Character Name</string>
    <string name="server">Server</string>
    <string name="save_button">Save</string>
    <string name="avatar_label">Avatar</string>
    <string-array name="servers_array">
        <item>Alexina</item>
        <item>Nao</item>
    </string-array>
    <string name="player_progress_known_label">Fill these if you know your progress with the particular Squire, leave it blank if you dont:</string>

    <string name="kaours_progress">Kaour\'s Progress</string>
    <string name="elsies_progress">Elsie\'s Progress</string>
    <string name="eirlyss_progress">Eirlys\'s Progress</string>
    <string name="dais_progress">Dai\'s Progress</string>
    <string name="squire_name_progress">%1$s\'s Progress</string>
    <string name="name_empty_error">You need to enter a name</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_char_message">Are you sure you want to delete %1$s?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="delete_with_one_char">You need to have at least one character to use this app!</string>
    <string name="progress_error_msg">Please put a number greater than 0</string>
    <string name="progress_range_error_msg">Please put a number between 1 and %1$d</string>
    <string name="character_exist_error">This character already exists</string>
    <string name="set_progress_number">Set progress</string>
    <string name="find_sequence_number">Find Sequence Number</string>
    <string name="see_special_conversation_options">See Special Conversation Options</string>
    <string name="see_full_sequence">See Full Sequence</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="hint_text">Hint</string>
    <string name="word_text">Keyword</string>
    <string name="sequence_text">Seq</string>
    <string name="percent_text">%</string>
    <string name="level_text">Level %1$s</string>
    <string name="reset_button">Reset</string>
    <string name="select_text">Select</string>
    <string name="no_matches_found">No matches found</string>
    <string name="found_number_matches">Found %1$s matches</string>
    <string name="try_these">Next input could be one of these: %1$s</string>
    <string name="found_match">Found one match at #%1$s</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="releases_url">https://github.com/mgangulo/SquireTrackerAndroid/releases</string>
    <string name="menu_releases">Releases</string>
    <string name="characters">Characters</string>
    <string name="add_character">Add new character</string>
    <string name="edit_character">Edit %1$s</string>
    <string name="character_progress">%1$s\'s progress</string>

    <string name="find_squire_progress">Find progress on %1$s</string>
    <string name="squire_details">%1$s\'s details</string>
    <string name="squire_sequence">%1$s\'s conversation sequence</string>
    <string name="squire_special">%1$s\'s special options</string>
</resources>
