<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_characters"
                android:icon="@drawable/ic_people"
                android:title="@string/menu_characters"/>
        <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_policy"
                android:title="@string/menu_privacy"/>
        <item
                android:id="@+id/nav_releases"
                android:icon="@drawable/ic_download"
                android:title="@string/menu_releases"
            android:checkable="false"/>
    </group>


</menu>
