<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/charNameInputLayout">

        <com.mabinogifanmade.squiretracker.utils.views.ClearableTextInputEditText
            android:id="@+id/charNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/character_name"
            android:maxLength="20"
            android:inputType="textCapWords"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_btwn_elements"
        android:text="@string/server" />

    <Spinner
        android:id="@+id/serverSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_btwn_elements"
        android:text="@string/avatar_label" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_orange"
            android:padding="@dimen/player_avatar_margin"
            android:background="@drawable/avatar_border"
            />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_yellow"
            android:padding="@dimen/player_avatar_margin"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_green"
            android:padding="@dimen/player_avatar_margin"/>
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_blue"
            android:padding="@dimen/player_avatar_margin"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_purple"
            android:padding="@dimen/player_avatar_margin"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_pink"
            android:padding="@dimen/player_avatar_margin" />

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_red"
            android:padding="@dimen/player_avatar_margin"/>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_mabi_black"
            android:padding="@dimen/player_avatar_margin"/>

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>