<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/squireCheckGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/squireRecyclerView"
        app:layout_constraintEnd_toStartOf="@id/listOption"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/dai"
            android:textOn="@string/dai"
            app:checkedColor="@color/darker_gray"
            app:radius="0dp"
            app:uncheckedColor="@color/darker_gray"
            android:id="@+id/toggleDai"/>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-2dp"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/eirlys"
            android:textOn="@string/eirlys"
            app:checkedColor="@color/darker_gray"
            app:radius="0dp"
            app:uncheckedColor="@color/darker_gray"
            android:id="@+id/toggleEirlys"/>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-2dp"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/elsie"
            android:textOn="@string/elsie"
            app:checkedColor="@color/darker_gray"
            app:radius="0dp"
            app:uncheckedColor="@color/darker_gray"
            android:id="@+id/toggleElsie"/>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-2dp"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/kaour"
            android:textOn="@string/kaour"
            app:checkedColor="@color/darker_gray"
            app:radius="0dp"
            app:uncheckedColor="@color/darker_gray"
            android:id="@+id/toggleKaour"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/listOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/padding_button"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/squireRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/gridRadioOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/radio_grid"
            android:checked="false"
            android:gravity="center"
            android:padding="@dimen/padding_button"
            android:text="" />

        <RadioButton
            android:id="@+id/listRadioOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/radio_list"
            android:checked="true"
            android:gravity="center"
            android:padding="@dimen/padding_button"
            android:text="" />


    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/squireRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/side_margin"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/top_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listOption"
        app:spanCount="1">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>