<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SquireDetailsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/squireImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/squireName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black_transparent"
            android:gravity="center"
            android:text="aaa"
            android:textAlignment="center"
            android:textColor="@color/gray" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageButton
        android:id="@+id/nextAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_button"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/sequenceRelative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sequenceRelative" />

    <RelativeLayout
        android:id="@+id/sequenceRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_button"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineImage"
        android:layout_marginTop="@dimen/margin_top_btwn_elements">

        <TextView
            android:id="@+id/sequenceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="aaa" />

        <TextView
            android:id="@+id/hintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sequenceText"
            android:layout_centerHorizontal="true"
            android:text="aaa" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/sequenceRelative"
        app:layout_constraintEnd_toStartOf="@id/sequenceRelative"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sequenceRelative" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/sequenceRelative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/sequenceRelative"
        app:layout_constraintTop_toTopOf="@id/sequenceRelative" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_button"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingTop="@dimen/padding_button"
        android:paddingBottom="@dimen/padding_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sequenceRelative">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:orientation="vertical"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_btwn_elements"
                android:text="@string/set_progress_number"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/findSequence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_btwn_elements"
                android:text="@string/find_sequence_number"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/specialConvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_btwn_elements"
                android:text="@string/see_special_conversation_options"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sequenceConvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_btwn_elements"
                android:text="@string/see_full_sequence"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>